--- a/css/third-article.css
+++ b/css/third-article.css
@@ -10,7 +10,8 @@
     width: 100%;
 }
 .third-article .container .txt-container{
-    padding: 40px 35px;
+    padding-top: 40px;
+    padding-left: 35px;
 }
 .third-article .container .txt-container h2{
     padding: 30px 0;
