--- a/css/first-article.css
+++ b/css/first-article.css
@@ -19,8 +19,9 @@ h5{font-size: 16px}
 
 .blue-btn{
   background-color: #0061FF;
-  padding: 10px 25px;
+  padding: 8px 25px;
   color: white;
+  text-decoration: none;
 }
 .col_1_9 {
   width: calc(100% / 9);
@@ -53,16 +54,15 @@ h5{font-size: 16px}
 
 header ul li{
   display: inline-block;
-  padding: 12px 0;
+  padding: 5px 0;
   vertical-align: middle;
 }
 
-header ul li a,
-.first-article a{
+header ul li a{
   text-decoration: none;
   list-style: none;
   color: black;
-  padding: 20px 25px;
+  padding: 10px 25px;
 }
 nav{
   width: 100%;
@@ -87,9 +87,6 @@ nav ul{
   padding: 10px 10px;
 }
 
-.nav-right li a:last-child{
-  padding: 16px 25px ;
-}
 
 /* **************************************************** */
 /* ANIMAZIONI NAV*/
@@ -100,7 +97,7 @@ nav li{
   transition: box-shadow 0.5s;
 }
 nav li:hover{
-  box-shadow: 20px 20px 50px grey;
+  box-shadow: 5px 10px 10px grey;
 }
 /* .nav-right .blue-btn{
   box-shadow: 3px 10px black;
@@ -109,7 +106,7 @@ nav li:hover{
  /* First Article */
  main .blue-bg{
    background-color: #B4D0E7;
-   margin-top: 80px;
+   margin-top: 50px;
    position: relative;
    max-height: 720px;
  }
@@ -134,7 +131,7 @@ main .first-article .row{
 main .first-article a{
   display: block;
   color: white;
-  width: 235px;
+   width: 235px;
   padding: 5px 20px;
 }
 main .first-article .left-bottom{
