--- a/css/footer.css
+++ b/css/footer.css
@@ -35,3 +35,6 @@ footer .container-large .language{
     border-top: 1px solid lightgray;
     padding-bottom: 50px;
 }
+footer .container-large{
+    padding-bottom: 10px;
+}
